--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="box first">
+        <img src="img/01.png" alt="Scarpe di tela">
+        <h3>il nostro modello di punta</h3>
+    </div>
+    <div class="box second">
+        <img src="img/02.png" alt="Scarpe Hilfiger">
+        <h3>il nostro modello di punta</h3>
+    </div>
+    <div class="box third">
+        <img src="img/03.png" alt="Scarpe Converse">
+        <h3>il nostro modello di punta</h3>
+    </div>
 </body>
 </html>
