--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
 </head>
 <body>
     <div class="box first">
-        <img src="img/01.png" alt="Scarpe di tela">
-        <h3>il nostro modello di punta</h3>
+        <div class="cont">
+            <img src="img/01.png" alt="Scarpe di tela">
+            <h3>il nostro modello di punta</h3>
+        </div>
     </div>
     <div class="box second">
-        <img src="img/02.png" alt="Scarpe Hilfiger">
-        <h3>il nostro modello di punta</h3>
+        <div class="cont">
+            <img src="img/02.png" alt="Scarpe Hilfiger">
+            <h3>il nostro modello di punta</h3>
+        </div>
     </div>
     <div class="box third">
-        <img src="img/03.png" alt="Scarpe Converse">
-        <h3>il nostro modello di punta</h3>
+        <div class="cont">
+            <img src="img/03.png" alt="Scarpe Converse">
+            <h3>il nostro modello di punta</h3>
+        </div>
     </div>
 </body>
 </html>
