--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <body>
     <div class="quick_menu">
         <ul>
-            <li><a href="#1" class="scroll" id="b_1">1</a></li>
-            <li><a href="#2" class="scroll" id="b_2">2</a></li>
-            <li><a href="#3" class="scroll" id="b_3">3</a></li>
+            <li><a href="#one" class="scroll" id="b_1">1</a></li>
+            <li><a href="#two" class="scroll" id="b_2">2</a></li>
+            <li><a href="#three" class="scroll" id="b_3">3</a></li>
         </ul>
     </div>
 
-    <div class="box first" id="1">
+    <div class="box first" id="one">
         <div class="cont">
             <img src="img/01.png" alt="Scarpe di tela">
             <h3>il nostro modello di punta</h3>
         </div>
     </div>
 
-    <div class="box second" id="2">
+    <div class="box second" id="two">
         <div class="cont">
             <img src="img/02.png" alt="Scarpe Hilfiger">
             <h3>il nostro modello di punta</h3>
         </div>
     </div>
 
-    <div class="box third" id="3">
+    <div class="box third" id="three">
         <div class="cont">
             <img src="img/03.png" alt="Scarpe Converse">
             <h3>il nostro modello di punta</h3>
